--- a/.hintrc
+++ b/.hintrc
@@ -13,7 +13,8 @@
     "axe/name-role-value": [
       "default",
       {
-        "link-name": "off"
+        "link-name": "off",
+        "button-name": "off"
       }
     ],
     "disown-opener": "off",
